1、表主键设置自增 2、not null列设置默认值，插入问题研究